# lari

./: .gitignore  Cargo.toml  LICENSE  README.md  syntax.lr
laric/: Cargo.toml
laric/src/: lexer.rs  main.rs  parser.rs  repl.rs  syntax.rs
laric/src/parser/: expr.rs
lariman/: main.rs
lariup/: README.md  main.rs
src/: main.rs
