[package]
name = "lari"
version = "0.1.0"
edition = "2021"
default-run = "laric"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "laric"
path = "./laric/main.rs"

[[bin]]
name = "lariman"
path = "./lariman/main.rs"

[[bin]]
name = "lariup"
path = "./lariup/main.rs"
